# cpp-exercises

./: .gitignore  Makefile  README.md  hello.cc  sample4.cc  sample4.h
2_sample_unit_test/: string_compare  string_compare.cc
3_escaping_characters/: main.cc
line_count/: CMakeLists.txt  README.md  run_tests.sh
line_count/features/: cli.feature
line_count/src/: line_count.cc  line_count.h  main.cc
line_count/test/: CMakeLists.txt
line_count/test/test_line_count/: CMakeLists.txt  test_line_count.cc  test_line_count.h
palindrome/: CMakeLists.txt  Gemfile  Makefile  README.md  build.sh  build_and_test.sh  run_tests.sh
palindrome/features/: palindrome.feature
palindrome/src/: main.cc  node.cc  node.h  palindrome.cc  palindrome.h
palindrome/test/: CMakeLists.txt
palindrome/test/test_node/: CMakeLists.txt  test_node.cc  test_node.h
temperature_converter/: CMakeLists.txt  README.md  build_and_test.sh  run_tests.sh
temperature_converter/src/: main.cc  temperature_converter.cc  temperature_converter.h
temperature_converter/test/: CMakeLists.txt
temperature_converter/test/test_temperature_converter/: CMakeLists.txt  test_temperature_converter.cc  test_temperature_converter.h
